# capy-amqp-cpp

./: .gitignore  CMakeLists.txt  README.md  capy-amqp-cpp.pc.in  version.txt
include/: capy_address.hpp  capy_amqp.h  capy_amqp.hpp  capy_amqp_exchange.hpp  capy_common.hpp
include/capy/: amqp.h  amqp.hpp  amqp_address.h  amqp_address.hpp  amqp_broker.h  amqp_broker.hpp  amqp_cache.h  amqp_common.h  amqp_common.hpp  amqp_deferred.h  amqp_exception.h
lib/: CMakeLists.txt
lib/cmake/: capy-amqp-cpp.cmake  capy_amqp_cpp.cmake
src/: amqp_address.cc  amqp_address.cpp  amqp_broker.cc  amqp_broker.cpp  amqp_common.cc  amqp_common.cpp  capy_address.cpp  capy_amqp.cpp  capy_amqp_exchange.cpp  capy_common.cpp
src/broker_impl/: broker.cc  broker.h  handler.h  pool.h
src/deferred_mpl/: deferred.cc  deferred.h
src/impl/: amqp_broker_impl.cc  amqp_broker_impl.h  amqp_handler_impl.h  amqp_pool_impl.h
tests/: CMakeCommonTest.in  CMakeLists.txt
tests/address/: CMakeLists.txt  address.cc  address.cpp  adsress.cpp
tests/amqp-cpp-async/: CMakeLists.txt  consume.cc
tests/async-rpc-client/: CMakeLists.txt  rpc_client.cc
tests/async-rpc-server/: CMakeLists.txt  rpc_server.cc
tests/broker/: CMakeLists.txt  broker_constructor.h  broker_constructor.hpp  dotenv.tmpl  listen.cc  listen.cpp  publish.cc  publish.cpp  version.txt
tests/deferred/: CMakeLists.txt  some_deferred.cc
tests/exchange/: CMakeLists.txt  connection.cpp  exchange.hpp  listen.cpp  publish.cpp
tests/initial/: CMakeLists.txt  initial.cc  initial.cpp
tests/pool/: CMakeLists.txt  pool.cc
tests/promise/: CMakeLists.txt  some_promise.cc
tests/sync-rpc-publish/: CMakeLists.txt  publish.cc
